# rpi-zero2w-strava-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  justfile  prek.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: mdbook.yml
book/: book.toml
book/src/: SUMMARY.md  building.md  cli.md  configuration.md  gallery.md  hardware.md  introduction.md  logs.md  references.md  sd-card.md  service.md  shopping-list.md  strava-app.md  strava-auth.md  troubleshooting.md  updating.md  usage.md  useful-links.md  wifi.md
common/: Cargo.toml
common/src/: lib.rs
console/: Cargo.toml
console/src/: main.rs  serial.rs  wizard.rs
dashboard/: Cargo.toml
dashboard/src/: args.rs  auth.rs  config.rs  cycle.rs  ds3231.rs  errors.rs  firmware.rs  heartbeat.rs  ina219.rs  logging.rs  main.rs  net.rs  power.rs  render.rs  runloop.rs  schedule.rs  stats.rs
display/: Cargo.toml
display/src/: config.rs  epd7in3e.rs  errors.rs  format.rs  icons.rs  ina219.rs  lib.rs  palette.rs  renderer.rs
display/tests/: snapshots.rs
docs/: hardware.md  strava.md
install/: setup-usb-gadget.sh  strava-dashboard.service  strava-usbd.service
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: check-gpio4.sh  check-rtc-readiness.sh  monitor-pi-wake.sh
strava/: Cargo.toml
strava/src/: cache.rs  client.rs  config.rs  errors.rs  lib.rs  oauth.rs  stats.rs  types.rs
strava/src/types/: activity.rs  athlete.rs  athlete_stats.rs  mod.rs  token.rs
usbd/: Cargo.toml
usbd/src/: main.rs  wifi.rs
