[package]
name = "rpi-zero2w-strava-dashboard"
version = "0.1.0"
edition = "2024"
authors = ["Nicolas Woltmann <github@nico-ow.mozmail.com>"]
description = "Strava dashboard for Waveshare PhotoPainter e-paper display with RPi Zero 2W"
license = "MIT"
repository = "https://github.com/nobriot/rpi-zero2w-strava-dashboard"

[[bin]]
name = "strava-dashboard"
path = "src/main.rs"

[dependencies]
strava = { path = "../strava" }
display = { path = "../display" }
chrono = "0.4"
image = "0.25"
log = "0.4.29"
thiserror = "2.0.18"
env_logger = "0.11.9"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
dirs = "6"
