[package]
name = "rpi-zero2w-strava-dashboard"
version = "0.1.0"
edition = "2024"
authors = ["Nicolas Woltmann <github@nico-ow.mozmail.com>"]
description = "Strava dashboard for Waveshare PhotoPainter e-paper display with RPi Zero 2W"
license = "MIT"
repository = "https://github.com/nobriot/rpi-zero2w-strava-dashboard"

[[bin]]
name = "strava-dashboard"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
strava = { path = "../strava" }
display = { path = "../display" }
chrono = "0.4"
dirs = "6"
image = "0.25"
log = "0.4.29"
rppal = "0.22"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1"
env_logger = "0.11.10"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
