[package]
name = "display"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
imageproc = "0.26"
ab_glyph = "0.2"
chrono = "0.4"
rppal = { version = "0.22", features = ["hal"] }
log = "0.4.29"
thiserror = "2.0.18"
strava = { path = "../strava" }
resvg = { version = "0.47", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
