[package]
name = "display"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
common = { path = "../common" }
image = "0.25"
imageproc = "0.26"
ab_glyph = "0.2"
chrono = "0.4"
rppal = { version = "0.22", features = ["hal"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
resvg = { version = "0.47", default-features = false }

[dev-dependencies]
strava = { path = "../strava" }
serde_json = "1.0"
toml = "1.1"
