[package]
name = "strava"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4.29"
reqwest = {version = "0.13.2", features =["form", "blocking"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.0"
