[package]
name = "usbd"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "strava-usbd"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
strava = { path = "../strava" }
serde_json = "1"
toml = "0.8"
dirs = "6"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
